deploy: 85001611b61cdf16892b53c133ff05ee334d935d

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite-tw-test/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/assets/index.d439e2a1.js"></script>
-    <link rel="stylesheet" href="/assets/index.8488069d.css">
+    <script type="module" crossorigin src="/vite-tw-test/assets/index.d439e2a1.js"></script>
+    <link rel="stylesheet" href="/vite-tw-test/assets/index.8488069d.css">
   </head>
   <body>
     <div id="root"></div>
